--- a/packages/redva/package.json
+++ b/packages/redva/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redva",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "React and redux based, lightweight and elm-style framework.",
   "repository": {
     "type": "git",
@@ -20,7 +20,7 @@
     "frontend"
   ],
   "authors": [
-    "chencheng <sorrycc@gmail.com> (https://github.com/sorrycc)"
+    "fishedee <fishedee@foxmail.com> (https://github.com/fishedee)"
   ],
   "license": "MIT",
   "bugs": {
