--- a/packages/redva-core/package.json
+++ b/packages/redva-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redva-core",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "The core lightweight library for redva, based on redux and async/await.",
   "repository": {
     "type": "git",
@@ -25,7 +25,7 @@
     "url": "https://github.com/fishedee/redva/issues"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.34",
+    "babel-runtime": "^6.26.0",
     "flatten": "^1.0.2",
     "global": "^4.3.2",
     "immer": "^1.2.1",
