--- a/packages/redva-loading/package.json
+++ b/packages/redva-loading/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redva-loading",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Auto loading plugin for redva.",
   "repository": {
     "type": "git",
@@ -18,7 +18,7 @@
   "license": "MIT",
   "main": "lib/index.js",
   "devDependencies": {
-    "redva": "^1.0.4"
+    "redva": "^1.0.5"
   },
   "peerDependencies": {
     "redva": "^1.0.2"
@@ -28,6 +28,6 @@
     "src"
   ],
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.34"
+    "babel-runtime": "^6.26.0"
   }
 }
