--- a/packages/redva/package.json
+++ b/packages/redva/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redva",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "React and redux based, lightweight and elm-style framework.",
   "repository": {
     "type": "git",
@@ -27,10 +27,10 @@
     "url": "https://github.com/fishedee/redva/issues"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.34",
     "@types/isomorphic-fetch": "^0.0.34",
     "@types/react-router": "^4.0.23",
     "@types/react-router-redux": "^5.0.13",
+    "babel-runtime": "^6.26.0",
     "global": "^4.3.2",
     "history": "^4.6.3",
     "invariant": "^2.2.2",
@@ -39,7 +39,7 @@
     "react-router-dom": "^4.1.2",
     "react-router-redux": "5.0.0-alpha.9",
     "redux": "^3.7.2",
-    "redva-core": "^1.0.4"
+    "redva-core": "^1.0.5"
   },
   "peerDependencies": {
     "react": "15.x || ^16.0.0-0",
