--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name":"redva-build",
+  "name": "redva-build",
   "private": true,
   "scripts": {
     "build": "node scripts/build.js",
@@ -17,14 +17,14 @@
     "bootstrap": "lerna bootstrap"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.40",
-    "@babel/core": "^7.0.0-beta.40",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.44",
-    "@babel/preset-env": "^7.0.0-beta.40",
-    "@babel/preset-react": "^7.0.0-beta.40",
-    "@babel/preset-stage-0": "^7.0.0-beta.40",
-    "@babel/runtime": "^7.0.0-beta.32",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^8.0.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-runtime": "^6.26.0",
     "chalk": "^2.3.2",
     "coveralls": "^3.0.0",
     "eslint": "^4.10.0",
