--- a/packages/redva-loading/package.json
+++ b/packages/redva-loading/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redva-loading",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Auto loading plugin for redva.",
   "repository": {
     "type": "git",
@@ -18,7 +18,16 @@
   "license": "MIT",
   "main": "lib/index.js",
   "devDependencies": {
-    "redva": "^1.0.6"
+    "flatten": "^1.0.2",
+    "global": "^4.3.2",
+    "history": "^4.7.2",
+    "hoist-non-react-statics": "^2.5.0",
+    "immer": "^1.3.0",
+    "min-document": "^2.19.0",
+    "react": "^16.4.0",
+    "react-router": "^4.2.0",
+    "redux": "^4.0.0",
+    "redva": "^1.0.7"
   },
   "peerDependencies": {
     "redva": "^1.0.2"
