--- a/package.json
+++ b/package.json
@@ -3,18 +3,8 @@
   "private": true,
   "scripts": {
     "build": "node scripts/build.js",
-    "build:es": "ES=1 node scripts/build.js",
-    "build:umd:clean": "rm -rf packages/dva/dist",
-    "build:umd": "node scripts/umd.js",
-    "build:umd:production": "NODE_ENV=production node scripts/umd.js",
-    "changelog": "lerna-changelog",
-    "test": "umi-test --coverage",
-    "debug": "umi-test",
-    "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "lint": "eslint --ext .js packages",
-    "precommit": "lint-staged",
-    "publish": "./scripts/publish.js",
-    "bootstrap": "lerna bootstrap"
+    "test": "jest",
+    "publish": "./scripts/publish.js"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -25,32 +15,9 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.26.0",
-    "chalk": "^2.3.2",
-    "coveralls": "^3.0.0",
-    "eslint": "^4.10.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0",
-    "expect": "^1.20.2",
-    "husky": "^0.14.3",
-    "lerna": "^2.0.0",
-    "lerna-changelog": "^0.7.0",
-    "lint-staged": "^7.0.2",
-    "prettier": "^1.11.1",
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0",
-    "rimraf": "^2.6.2",
-    "rollup": "^0.57.1",
-    "rollup-plugin-commonjs": "^9.1.0",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-uglify": "^3.0.0",
-    "shelljs": "^0.8.1",
-    "through2": "^2.0.3",
-    "uglify-js": "^3.3.18",
-    "umi-test": "^0.5.3",
-    "vinyl-fs": "^3.0.2"
+    "jest": "^23.0.0",
+    "lerna": "^2.11.0",
+    "shelljs": "^0.8.2"
   },
   "lint-staged": {
     "*.js": [
