--- a/packages/redva-core/package.json
+++ b/packages/redva-core/package.json
@@ -1,7 +1,11 @@
 {
   "name": "redva-core",
-  "version": "1.0.7",
+  "version": "1.1.0",
   "description": "The core lightweight library for redva, based on redux and async/await.",
+  "scripts": {
+    "build": "babel src -d lib",
+    "test": "jest"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/fishedee/redva"
@@ -12,7 +16,6 @@
     "dva",
     "alibaba",
     "redux",
-    "redux-saga",
     "elm",
     "framework",
     "frontend"
@@ -25,21 +28,24 @@
     "url": "https://github.com/fishedee/redva/issues"
   },
   "dependencies": {
-    "babel-runtime": "^6.26.0",
     "flatten": "^1.0.2",
     "global": "^4.3.2",
     "immer": "^1.2.1",
     "invariant": "^2.2.1",
     "is-plain-object": "^2.0.3",
-    "redux": "^3.7.1",
-    "redux-saga": "^0.16.0",
-    "warning": "^3.0.0"
-  },
-  "peerDependencies": {
-    "redux": "3.x"
+    "redux": "^4.0.0",
+    "warning": "^3.0.0",
+    "babel-runtime": "^6.26.0"
   },
   "devDependencies": {
-    "redux": "^4.0.0"
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.0.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "jest": "^23.0.0"
   },
   "files": [
     "lib",
