--- a/packages/redva-loading/package.json
+++ b/packages/redva-loading/package.json
@@ -1,7 +1,11 @@
 {
   "name": "redva-loading",
-  "version": "1.0.6",
+  "version": "1.1.0",
   "description": "Auto loading plugin for redva.",
+  "scripts": {
+    "build": "babel src -d lib",
+    "test": "jest"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/fishedee/redva"
@@ -18,19 +22,22 @@
   "license": "MIT",
   "main": "lib/index.js",
   "devDependencies": {
-    "flatten": "^1.0.2",
-    "global": "^4.3.2",
-    "history": "^4.7.2",
-    "hoist-non-react-statics": "^2.5.0",
-    "immer": "^1.3.0",
-    "min-document": "^2.19.0",
-    "react": "^16.4.0",
-    "react-router": "^4.2.0",
-    "redux": "^4.0.0",
-    "redva": "^1.0.7"
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.0.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "jest": "^23.0.0",
+    "react":"^16.4.0",
+    "react-dom":"^16.4.0",
+    "redva":"^1.1.0"
   },
   "peerDependencies": {
-    "redva": "^1.0.2"
+    "react": "15.x || ^16.0.0-0",
+    "react-dom": "15.x || ^16.0.0-0",
+    "redva": "^1.1.0"
   },
   "files": [
     "lib",
