--- a/packages/redva/package.json
+++ b/packages/redva/package.json
@@ -1,7 +1,11 @@
 {
   "name": "redva",
-  "version": "1.0.7",
+  "version": "1.1.0",
   "description": "React and redux based, lightweight and elm-style framework.",
+  "scripts": {
+    "build": "babel src -d lib",
+    "test": "jest"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/fishedee/redva"
@@ -14,7 +18,6 @@
     "react",
     "react-native",
     "redux",
-    "redux-saga",
     "elm",
     "framework",
     "frontend"
@@ -32,14 +35,25 @@
     "@types/react-router-redux": "^5.0.13",
     "babel-runtime": "^6.26.0",
     "global": "^4.3.2",
-    "history": "^4.6.3",
+    "history": "^4.7.2",
     "invariant": "^2.2.2",
     "isomorphic-fetch": "^2.2.1",
-    "react-redux": "^5.0.5",
-    "react-router-dom": "^4.1.2",
-    "react-router-redux": "5.0.0-alpha.9",
-    "redux": "^3.7.2",
-    "redva-core": "^1.0.7"
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "4.0.8",
+    "redva-core": "^1.1.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.0.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "jest": "^23.0.0",
+    "react":"^16.4.0",
+    "react-dom":"^16.4.0"
   },
   "peerDependencies": {
     "react": "15.x || ^16.0.0-0",
