--- a/examples/async-loading/package.json
+++ b/examples/async-loading/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "todomvc",
+  "name": "async-loading",
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
-    "react-scripts": "^1.1.4",
-    "react-test-renderer": "^16.3.1"
+    "react-scripts": "^1.1.4"
   },
   "dependencies": {
-    "classnames": "^2.2.5",
     "prop-types": "^15.6.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "redux-logger": "^3.0.6",
     "redva": "^1.1.0",
-    "reselect": "^3.0.1",
-    "todomvc-app-css": "^2.1.1"
+    "redva-loading": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "eject": "react-scripts eject",
+    "test": "react-scripts test"
   }
 }
