--- a/package.json
+++ b/package.json
@@ -3,21 +3,10 @@
   "private": true,
   "scripts": {
     "build": "node scripts/build.js",
-    "test": "jest",
-    "publish": "./scripts/publish.js"
+    "test": "node scripts/test.js"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.0.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-runtime": "^6.26.0",
-    "jest": "^23.0.0",
-    "lerna": "^2.11.0",
-    "shelljs": "^0.8.2"
+    "lerna": "^2.11.0"
   },
   "lint-staged": {
     "*.js": [
