--- a/packages/redva-core/package.json
+++ b/packages/redva-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redva-core",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "The core lightweight library for redva, based on redux and async/await.",
   "scripts": {
     "build": "babel src -d lib",
@@ -28,14 +28,14 @@
     "url": "https://github.com/fishedee/redva/issues"
   },
   "dependencies": {
+    "babel-runtime": "^6.26.0",
     "flatten": "^1.0.2",
     "global": "^4.3.2",
     "immer": "^1.2.1",
     "invariant": "^2.2.1",
     "is-plain-object": "^2.0.3",
-    "redux": "^4.0.0",
-    "warning": "^3.0.0",
-    "babel-runtime": "^6.26.0"
+    "redux": "^3.7.2",
+    "warning": "^3.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
